@@ -4,11 +4,13 @@ What's new in this drop (since 0.9)
 ==================================================================================
   * JCK1.3a compliant. 
   * All messages have been externalized. 
-  * Added 2 new APIs on JavaConventions: 
+  * Added 2 new APIs on JavaConventions for classpath validation.
          - IJavaModelStatus validateClasspath(IJavaProject project, IClasspathEntry[] classpath, IPath outputLocation) 
          - IJavaModelStatus validateClasspathEntry(IJavaProject project, IClasspathEntry entry, boolean checkSourceAttachment) 
  * Ant Eclipse compiler task added (org.eclipse.jdt.core.ant.Jdtcom)
  * Assertions support enabled: by default the compiler is 1.3 compliant, but it can optionally be turned into source 1.4 mode cf. JavaCore options.
+ * Added new APIs on JavaCore so as to change optional settings (compiler, formatter, codeassist, ...). Description of available options is available in JavaCore.ini
+ 	along with default values. Option settings are globally kept on JavaCore.
 
 PRs Fixed in this Release (since 1.0NL stream)
 ==================================================================================
